fixed overwrapping issue.

--- a/src/components/Attendees/AttendeeItem/attendee-item.module.css
+++ b/src/components/Attendees/AttendeeItem/attendee-item.module.css
@@ -1,5 +1,7 @@
 .item {
-  margin: auto;
+  /* margin: auto; */
+  overflow: hidden;
+  min-width: 0;
 }
 
 .drinkCountNormal {
@@ -18,4 +20,6 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+  min-width: 0;
 }
